[gd_scene load_steps=16 format=4 uid="uid://cft6wms2mdkei"]

[ext_resource type="Script" path="res://gui.gd" id="1_irdxi"]
[ext_resource type="PackedScene" uid="uid://b16dy7akcdbao" path="res://jugador.tscn" id="1_nrx7l"]
[ext_resource type="Texture2D" uid="uid://o8rm84on0yro" path="res://assets/Background/FondoP2.png" id="3_ckkd0"]
[ext_resource type="Texture2D" uid="uid://btnmo7uomkipc" path="res://assets/Background/FondoP1.png" id="4_2c7g7"]
[ext_resource type="Shader" path="res://bubble.gdshader" id="4_hygys"]
[ext_resource type="Texture2D" uid="uid://e37kudrbmi0f" path="res://assets/Burbuja.png" id="5_uiacn"]
[ext_resource type="PackedScene" uid="uid://0dmjcye5q48h" path="res://water_body.tscn" id="6_b3q5d"]
[ext_resource type="PackedScene" path="res://game_over.tscn" id="7_braoc"]
[ext_resource type="Texture2D" uid="uid://cqbgxoxtacgvh" path="res://assets/Terrain/FondoNuevo2.png" id="9_tgdlb"]
[ext_resource type="AudioStream" uid="uid://dfj5y5mwggkji" path="res://assets/Sounds/MÃºsica como se llama el jueguito.wav" id="10_qipvo"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_b4jrk"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gdo2e"]
noise = SubResource("FastNoiseLite_b4jrk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ho646"]
shader = ExtResource("4_hygys")
shader_parameter/distortion = 0.005
shader_parameter/speed = Vector2(0.4, 0.1)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_gdo2e")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ahmd"]
texture = ExtResource("9_tgdlb")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 32, -16, 32, 32, -16, 32)
0:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -16, 32, -16, 32, 32, -32, 32)
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -16, 16, -16, 16, 32, -32, 32)
2:0/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 32, -32, 32, 32, -16, 32)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 16, -32, 16, 32, -32, 32)
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 32, -32, 32, 16, -16, 16)
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 16, -32, 16)
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 16, -32, 16, 16, -32, 16)
2:2/0/terrains_peering_bit/top_left_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 32, -32, 32, -32, -32, 32, -32, 32, 16, 16, 16)
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
3:0/0/terrains_peering_bit/top_left_corner = 0
3:0/0/terrains_peering_bit/top_side = 0
3:0/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -32, 16, -32, -32, 32, -32, 32, 32, -16, 32)
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/top_left_corner = 0
5:0/0/terrains_peering_bit/top_side = 0
5:0/0/terrains_peering_bit/top_right_corner = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -16, -16, -16, -16, -32, 32, -32)
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 16, -32, 16, -16, 32, -16)
3:2/0/terrains_peering_bit/bottom_right_corner = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0

[sub_resource type="TileSet" id="TileSet_uxlix"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Burbles 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 1, 1)
sources/0 = SubResource("TileSetAtlasSource_4ahmd")

[node name="Node2D" type="Node2D"]

[node name="Jugador" parent="." instance=ExtResource("1_nrx7l")]
position = Vector2(320, 180)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(0, 360)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("3_ckkd0")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(320, 180)
texture = ExtResource("4_2c7g7")

[node name="BubblePixel" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ho646")
position = Vector2(78, 253)
scale = Vector2(0.14, 0.14)
texture = ExtResource("5_uiacn")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("1_irdxi")

[node name="MaxScoreLabel" type="Label" parent="GUI"]
offset_left = 507.0
offset_top = 2.0
offset_right = 547.0
offset_bottom = 25.0

[node name="ScoreLabel" type="Label" parent="GUI"]
offset_left = 4.0
offset_top = 1.0
offset_right = 44.0
offset_bottom = 24.0

[node name="GunBar" type="ProgressBar" parent="GUI"]
offset_left = 13.0
offset_top = 294.0
offset_right = 158.0
offset_bottom = 321.0
show_percentage = false

[node name="JetPackBar" type="ProgressBar" parent="GUI"]
offset_left = 13.0
offset_top = 326.0
offset_right = 162.0
offset_bottom = 353.0
max_value = 50.0
show_percentage = false

[node name="GunLabel" type="Label" parent="GUI"]
offset_left = 13.0
offset_top = 296.0
offset_right = 53.0
offset_bottom = 319.0

[node name="JetPackLabel" type="Label" parent="GUI"]
offset_left = 13.0
offset_top = 326.0
offset_right = 53.0
offset_bottom = 349.0

[node name="Game_over" parent="GUI" instance=ExtResource("7_braoc")]
visible = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAUAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAIAAAAAAAYAAAABAAIAAAD//wYAAAABAAIAAAD//wUAAAABAAEAAAD//wQAAAABAAEAAAAAAAQAAAADAAIAAAABAAQAAAABAAAAAAAKAAUAAAABAAEAAAAJAAUAAAABAAEAAAAIAAUAAAABAAEAAAAHAAUAAAABAAEAAAAGAAUAAAABAAEAAAAFAAUAAAABAAEAAAAEAAUAAAABAAEAAAADAAUAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAIAAAACAAQAAAABAAAAAAADAAYAAAABAAIAAAADAAQAAAABAAAAAAAEAAYAAAABAAIAAAAEAAQAAAABAAAAAAAFAAYAAAABAAIAAAAFAAQAAAABAAAAAAAGAAYAAAABAAIAAAAGAAQAAAABAAAAAAAHAAYAAAABAAIAAAAHAAQAAAABAAAAAAAIAAYAAAABAAIAAAAIAAQAAAABAAAAAAAJAAYAAAABAAIAAAAJAAQAAAAFAAIAAAAKAAYAAAABAAIAAAAKAAQAAAABAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAIAAAALAAQAAAACAAEAAAAKAAMAAAABAAEAAAAKAAIAAAABAAEAAAAKAAEAAAABAAEAAAAKAAAAAAABAAEAAAAKAP//AAABAAEAAAAKAP7/AAABAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAAJAP//AAAAAAEAAAAJAP7/AAAAAAEAAAAJAP3/AAAAAAEAAAAKAP3/AAABAAEAAAALAP3/AAACAAEAAAALAAAAAAACAAEAAAAJAAAAAAAAAAEAAAALAAEAAAACAAEAAAAJAAEAAAAAAAEAAAALAAIAAAACAAEAAAAJAAIAAAAAAAEAAAALAAMAAAACAAEAAAAJAAMAAAAAAAEAAAD+/wYAAAAAAAIAAAD+/wUAAAAAAAEAAAD+/wQAAAAAAAEAAAD//wMAAAABAAEAAAD//wIAAAABAAEAAAD//wEAAAABAAEAAAD//wAAAAABAAEAAAD/////AAABAAEAAAD///7/AAABAAEAAAD///3/AAABAAEAAAAAAP3/AAACAAEAAAAAAP7/AAACAAEAAAD+//7/AAAAAAEAAAD+//3/AAAAAAEAAAD+//z/AAAAAAEAAAD///z/AAABAAEAAAAAAPz/AAACAAEAAAAAAP//AAACAAEAAAD+////AAAAAAEAAAAAAAAAAAACAAEAAAD+/wAAAAAAAAEAAAAAAAEAAAACAAEAAAD+/wEAAAAAAAEAAAAAAAIAAAACAAEAAAD+/wIAAAAAAAEAAAAAAAMAAAACAAEAAAD+/wMAAAAAAAEAAAD//7T/AAABAAEAAAD//7X/AAABAAEAAAD//7b/AAABAAEAAAD//7f/AAABAAEAAAD//7j/AAABAAEAAAD//7n/AAABAAEAAAD//7r/AAABAAEAAAD//7v/AAABAAEAAAD//7z/AAABAAEAAAD//73/AAABAAEAAAD//77/AAABAAEAAAD//7//AAABAAEAAAD//8D/AAABAAEAAAD//8H/AAABAAEAAAD//8L/AAABAAEAAAD//8P/AAABAAEAAAD//8T/AAABAAEAAAD//8X/AAABAAEAAAD//8b/AAABAAEAAAD//8f/AAABAAEAAAD//8j/AAABAAEAAAD//8n/AAABAAEAAAD//8r/AAABAAEAAAD//8v/AAABAAEAAAD//8z/AAABAAEAAAD//83/AAABAAEAAAD//87/AAABAAEAAAD//8//AAABAAEAAAD//9D/AAABAAEAAAD//9H/AAABAAEAAAD//9L/AAABAAEAAAD//9P/AAABAAEAAAD//9T/AAABAAEAAAD//9X/AAABAAEAAAD//9b/AAABAAEAAAD//9f/AAABAAEAAAD//9j/AAABAAEAAAD//9n/AAABAAEAAAD//9r/AAABAAEAAAD//9v/AAABAAEAAAD//9z/AAABAAEAAAD//93/AAABAAEAAAD//97/AAABAAEAAAD//9//AAABAAEAAAD//+D/AAABAAEAAAD//+H/AAABAAEAAAD//+L/AAABAAEAAAD//+P/AAABAAEAAAD//+T/AAABAAEAAAD//+X/AAABAAEAAAD//+b/AAABAAEAAAD//+f/AAABAAEAAAD//+j/AAABAAEAAAD//+n/AAABAAEAAAD//+r/AAABAAEAAAD//+v/AAABAAEAAAD//+z/AAABAAEAAAD//+3/AAABAAEAAAD//+7/AAABAAEAAAD//+//AAABAAEAAAD///D/AAABAAEAAAD///H/AAABAAEAAAD///L/AAABAAEAAAD///P/AAABAAEAAAD///T/AAABAAEAAAD///X/AAABAAEAAAD///b/AAABAAEAAAD///f/AAABAAEAAAD///j/AAABAAEAAAD///n/AAABAAEAAAD///r/AAABAAEAAAD///v/AAABAAEAAAD+//v/AAAAAAEAAAAAAPv/AAACAAEAAAD+//r/AAAAAAEAAAAAAPr/AAACAAEAAAD+//n/AAAAAAEAAAAAAPn/AAACAAEAAAD+//j/AAAAAAEAAAAAAPj/AAACAAEAAAD+//f/AAAAAAEAAAAAAPf/AAACAAEAAAD+//b/AAAAAAEAAAAAAPb/AAACAAEAAAD+//X/AAAAAAEAAAAAAPX/AAACAAEAAAD+//T/AAAAAAEAAAAAAPT/AAACAAEAAAD+//P/AAAAAAEAAAAAAPP/AAACAAEAAAD+//L/AAAAAAEAAAAAAPL/AAACAAEAAAD+//H/AAAAAAEAAAAAAPH/AAACAAEAAAD+//D/AAAAAAEAAAAAAPD/AAACAAEAAAD+/+//AAAAAAEAAAAAAO//AAACAAEAAAD+/+7/AAAAAAEAAAAAAO7/AAACAAEAAAD+/+3/AAAAAAEAAAAAAO3/AAACAAEAAAD+/+z/AAAAAAEAAAAAAOz/AAACAAEAAAD+/+v/AAAAAAEAAAAAAOv/AAACAAEAAAD+/+r/AAAAAAEAAAAAAOr/AAACAAEAAAD+/+n/AAAAAAEAAAAAAOn/AAACAAEAAAD+/+j/AAAAAAEAAAAAAOj/AAACAAEAAAD+/+f/AAAAAAEAAAAAAOf/AAACAAEAAAD+/+b/AAAAAAEAAAAAAOb/AAACAAEAAAD+/+X/AAAAAAEAAAAAAOX/AAACAAEAAAD+/+T/AAAAAAEAAAAAAOT/AAACAAEAAAD+/+P/AAAAAAEAAAAAAOP/AAACAAEAAAD+/+L/AAAAAAEAAAAAAOL/AAACAAEAAAD+/+H/AAAAAAEAAAAAAOH/AAACAAEAAAD+/+D/AAAAAAEAAAAAAOD/AAACAAEAAAD+/9//AAAAAAEAAAAAAN//AAACAAEAAAD+/97/AAAAAAEAAAAAAN7/AAACAAEAAAD+/93/AAAAAAEAAAAAAN3/AAACAAEAAAD+/9z/AAAAAAEAAAAAANz/AAACAAEAAAD+/9v/AAAAAAEAAAAAANv/AAACAAEAAAD+/9r/AAAAAAEAAAAAANr/AAACAAEAAAD+/9n/AAAAAAEAAAAAANn/AAACAAEAAAD+/9j/AAAAAAEAAAAAANj/AAACAAEAAAD+/9f/AAAAAAEAAAAAANf/AAACAAEAAAD+/9b/AAAAAAEAAAAAANb/AAACAAEAAAD+/9X/AAAAAAEAAAAAANX/AAACAAEAAAD+/9T/AAAAAAEAAAAAANT/AAACAAEAAAD+/9P/AAAAAAEAAAAAANP/AAACAAEAAAD+/9L/AAAAAAEAAAAAANL/AAACAAEAAAD+/9H/AAAAAAEAAAAAANH/AAACAAEAAAD+/9D/AAAAAAEAAAAAAND/AAACAAEAAAD+/8//AAAAAAEAAAAAAM//AAACAAEAAAD+/87/AAAAAAEAAAAAAM7/AAACAAEAAAD+/83/AAAAAAEAAAAAAM3/AAACAAEAAAD+/8z/AAAAAAEAAAAAAMz/AAACAAEAAAD+/8v/AAAAAAEAAAAAAMv/AAACAAEAAAD+/8r/AAAAAAEAAAAAAMr/AAACAAEAAAD+/8n/AAAAAAEAAAAAAMn/AAACAAEAAAD+/8j/AAAAAAEAAAAAAMj/AAACAAEAAAD+/8f/AAAAAAEAAAAAAMf/AAACAAEAAAD+/8b/AAAAAAEAAAAAAMb/AAACAAEAAAD+/8X/AAAAAAEAAAAAAMX/AAACAAEAAAD+/8T/AAAAAAEAAAAAAMT/AAACAAEAAAD+/8P/AAAAAAEAAAAAAMP/AAACAAEAAAD+/8L/AAAAAAEAAAAAAML/AAACAAEAAAD+/8H/AAAAAAEAAAAAAMH/AAACAAEAAAD+/8D/AAAAAAEAAAAAAMD/AAACAAEAAAD+/7//AAAAAAEAAAAAAL//AAACAAEAAAD+/77/AAAAAAEAAAAAAL7/AAACAAEAAAD+/73/AAAAAAEAAAAAAL3/AAACAAEAAAD+/7z/AAAAAAEAAAAAALz/AAACAAEAAAD+/7v/AAAAAAEAAAAAALv/AAACAAEAAAD+/7r/AAAAAAEAAAAAALr/AAACAAEAAAD+/7n/AAAAAAEAAAAAALn/AAACAAEAAAD+/7j/AAAAAAEAAAAAALj/AAACAAEAAAD+/7f/AAAAAAEAAAAAALf/AAACAAEAAAD+/7b/AAAAAAEAAAAAALb/AAACAAEAAAD+/7X/AAAAAAEAAAAAALX/AAACAAEAAAD+/7T/AAAAAAEAAAAAALT/AAACAAEAAAD+/7P/AAAAAAAAAAD//7P/AAABAAAAAAAAALP/AAACAAAAAAAKALT/AAABAAEAAAAKALX/AAABAAEAAAAKALb/AAABAAEAAAAKALf/AAABAAEAAAAKALj/AAABAAEAAAAKALn/AAABAAEAAAAKALr/AAABAAEAAAAKALv/AAABAAEAAAAKALz/AAABAAEAAAAKAL3/AAABAAEAAAAKAL7/AAABAAEAAAAKAL//AAABAAEAAAAKAMD/AAABAAEAAAAKAMH/AAABAAEAAAAKAML/AAABAAEAAAAKAMP/AAABAAEAAAAKAMT/AAABAAEAAAAKAMX/AAABAAEAAAAKAMb/AAABAAEAAAAKAMf/AAABAAEAAAAKAMj/AAABAAEAAAAKAMn/AAABAAEAAAAKAMr/AAABAAEAAAAKAMv/AAABAAEAAAAKAMz/AAABAAEAAAAKAM3/AAABAAEAAAAKAM7/AAABAAEAAAAKAM//AAABAAEAAAAKAND/AAABAAEAAAAKANH/AAABAAEAAAAKANL/AAABAAEAAAAKANP/AAABAAEAAAAKANT/AAABAAEAAAAKANX/AAABAAEAAAAKANb/AAABAAEAAAAKANf/AAABAAEAAAAKANj/AAABAAEAAAAKANn/AAABAAEAAAAKANr/AAABAAEAAAAKANv/AAABAAEAAAAKANz/AAABAAEAAAAKAN3/AAABAAEAAAAKAN7/AAABAAEAAAAKAN//AAABAAEAAAAKAOD/AAABAAEAAAAKAOH/AAABAAEAAAAKAOL/AAABAAEAAAAKAOP/AAABAAEAAAAKAOT/AAABAAEAAAAKAOX/AAABAAEAAAAKAOb/AAABAAEAAAAKAOf/AAABAAEAAAAKAOj/AAABAAEAAAAKAOn/AAABAAEAAAAKAOr/AAABAAEAAAAKAOv/AAABAAEAAAAKAOz/AAABAAEAAAAKAO3/AAABAAEAAAAKAO7/AAABAAEAAAAKAO//AAABAAEAAAAKAPD/AAABAAEAAAAKAPH/AAABAAEAAAAKAPL/AAABAAEAAAAKAPP/AAABAAEAAAAKAPT/AAABAAEAAAAKAPX/AAABAAEAAAAKAPb/AAABAAEAAAAKAPf/AAABAAEAAAAKAPj/AAABAAEAAAAKAPn/AAABAAEAAAAKAPr/AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAAJAPz/AAAAAAEAAAALAPz/AAACAAEAAAAJAPv/AAAAAAEAAAALAPv/AAACAAEAAAAJAPr/AAAAAAEAAAALAPr/AAACAAEAAAAJAPn/AAAAAAEAAAALAPn/AAACAAEAAAAJAPj/AAAAAAEAAAALAPj/AAACAAEAAAAJAPf/AAAAAAEAAAALAPf/AAACAAEAAAAJAPb/AAAAAAEAAAALAPb/AAACAAEAAAAJAPX/AAAAAAEAAAALAPX/AAACAAEAAAAJAPT/AAAAAAEAAAALAPT/AAACAAEAAAAJAPP/AAAAAAEAAAALAPP/AAACAAEAAAAJAPL/AAAAAAEAAAALAPL/AAACAAEAAAAJAPH/AAAAAAEAAAALAPH/AAACAAEAAAAJAPD/AAAAAAEAAAALAPD/AAACAAEAAAAJAO//AAAAAAEAAAALAO//AAACAAEAAAAJAO7/AAAAAAEAAAALAO7/AAACAAEAAAAJAO3/AAAAAAEAAAALAO3/AAACAAEAAAAJAOz/AAAAAAEAAAALAOz/AAACAAEAAAAJAOv/AAAAAAEAAAALAOv/AAACAAEAAAAJAOr/AAAAAAEAAAALAOr/AAACAAEAAAAJAOn/AAAAAAEAAAALAOn/AAACAAEAAAAJAOj/AAAAAAEAAAALAOj/AAACAAEAAAAJAOf/AAAAAAEAAAALAOf/AAACAAEAAAAJAOb/AAAAAAEAAAALAOb/AAACAAEAAAAJAOX/AAAAAAEAAAALAOX/AAACAAEAAAAJAOT/AAAAAAEAAAALAOT/AAACAAEAAAAJAOP/AAAAAAEAAAALAOP/AAACAAEAAAAJAOL/AAAAAAEAAAALAOL/AAACAAEAAAAJAOH/AAAAAAEAAAALAOH/AAACAAEAAAAJAOD/AAAAAAEAAAALAOD/AAACAAEAAAAJAN//AAAAAAEAAAALAN//AAACAAEAAAAJAN7/AAAAAAEAAAALAN7/AAACAAEAAAAJAN3/AAAAAAEAAAALAN3/AAACAAEAAAAJANz/AAAAAAEAAAALANz/AAACAAEAAAAJANv/AAAAAAEAAAALANv/AAACAAEAAAAJANr/AAAAAAEAAAALANr/AAACAAEAAAAJANn/AAAAAAEAAAALANn/AAACAAEAAAAJANj/AAAAAAEAAAALANj/AAACAAEAAAAJANf/AAAAAAEAAAALANf/AAACAAEAAAAJANb/AAAAAAEAAAALANb/AAACAAEAAAAJANX/AAAAAAEAAAALANX/AAACAAEAAAAJANT/AAAAAAEAAAALANT/AAACAAEAAAAJANP/AAAAAAEAAAALANP/AAACAAEAAAAJANL/AAAAAAEAAAALANL/AAACAAEAAAAJANH/AAAAAAEAAAALANH/AAACAAEAAAAJAND/AAAAAAEAAAALAND/AAACAAEAAAAJAM//AAAAAAEAAAALAM//AAACAAEAAAAJAM7/AAAAAAEAAAALAM7/AAACAAEAAAAJAM3/AAAAAAEAAAALAM3/AAACAAEAAAAJAMz/AAAAAAEAAAALAMz/AAACAAEAAAAJAMv/AAAAAAEAAAALAMv/AAACAAEAAAAJAMr/AAAAAAEAAAALAMr/AAACAAEAAAAJAMn/AAAAAAEAAAALAMn/AAACAAEAAAAJAMj/AAAAAAEAAAALAMj/AAACAAEAAAAJAMf/AAAAAAEAAAALAMf/AAACAAEAAAAJAMb/AAAAAAEAAAALAMb/AAACAAEAAAAJAMX/AAAAAAEAAAALAMX/AAACAAEAAAAJAMT/AAAAAAEAAAALAMT/AAACAAEAAAAJAMP/AAAAAAEAAAALAMP/AAACAAEAAAAJAML/AAAAAAEAAAALAML/AAACAAEAAAAJAMH/AAAAAAEAAAALAMH/AAACAAEAAAAJAMD/AAAAAAEAAAALAMD/AAACAAEAAAAJAL//AAAAAAEAAAALAL//AAACAAEAAAAJAL7/AAAAAAEAAAALAL7/AAACAAEAAAAJAL3/AAAAAAEAAAALAL3/AAACAAEAAAAJALz/AAAAAAEAAAALALz/AAACAAEAAAAJALv/AAAAAAEAAAALALv/AAACAAEAAAAJALr/AAAAAAEAAAALALr/AAACAAEAAAAJALn/AAAAAAEAAAALALn/AAACAAEAAAAJALj/AAAAAAEAAAALALj/AAACAAEAAAAJALf/AAAAAAEAAAALALf/AAACAAEAAAAJALb/AAAAAAEAAAALALb/AAACAAEAAAAJALX/AAAAAAEAAAALALX/AAACAAEAAAAJALT/AAAAAAEAAAALALT/AAACAAEAAAAJALP/AAAAAAAAAAAKALP/AAABAAAAAAALALP/AAACAAAAAAA=")
tile_set = SubResource("TileSet_uxlix")

[node name="Water_body" parent="." instance=ExtResource("6_b3q5d")]
position = Vector2(-32, 346)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qipvo")
autoplay = true
